// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel getItemWrap switchType : fade 1`] = `
.c0 {
  display: inline-block;
  position: absolute;
  opacity: 0;
  height: 4.166666666666667em;
  width: 4.166666666666667em;
  -webkit-transition: opacity 500s;
  transition: opacity 500s;
  overflow: hidden;
  vertical-align: top;
}

<div>
  <div
    checked={false}
    className="c0"
    height={50}
    width={50}
  >
    hello world
  </div>
</div>
`;

exports[`Carousel getItemWrap switchType : horizontal 1`] = `
.c0 {
  display: inline-block;
  height: 4.166666666666667em;
  width: 4.166666666666667em;
  -webkit-transition: opacity 500s;
  transition: opacity 500s;
  overflow: hidden;
  vertical-align: top;
}

<div>
  <div
    checked={false}
    className="c0"
    height={50}
    width={50}
  >
    hello world
  </div>
</div>
`;

exports[`Carousel getItemWrap switchType : vertical 1`] = `
.c0 {
  display: inline-block;
  height: 4.166666666666667em;
  width: 4.166666666666667em;
  -webkit-transition: opacity 500s;
  transition: opacity 500s;
  overflow: hidden;
  vertical-align: top;
}

<div>
  <div
    checked={false}
    className="c0"
    height={50}
    width={50}
  >
    hello world
  </div>
</div>
`;
